webpack config done

--- a/src/about.html
+++ b/src/about.html
@@ -3,33 +3,19 @@
 
     <head>
         <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="../dist/css/theme.css" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Monoisam - Home</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="../dist/css/theme.css">
+
+        <title>Monoisam - About us</title>
     </head>
 
     <body>
+        <h1>About us page!</h1>
         <div class="container">
-            <h1>Helloo, world!</h1>
-            <hr />
-
-            <button type="button" class="btn btn-primary">Primary</button>
-            <button type="button" class="btn btn-secondary">Secondary</button>
-            <button type="button" class="btn btn-success">Success</button>
-            <button type="button" class="btn btn-danger">Danger</button>
-            <button type="button" class="btn btn-warning">Warning</button>
-            <button type="button" class="btn btn-info">Info</button>
-            <button type="button" class="btn btn-light">Light</button>
-            <button type="button" class="btn btn-dark">Dark</button>
-
-            <button type="button" class="btn btn-link">Link</button>
-
-            <hr />
             <div class="alert alert-primary" role="alert">
                 This is a primary alert—check it out!
             </div>
